--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -1,29 +1,85 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
-    "asd" : {
-
+    "continue" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ready!"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Hazırım!"
+          }
+        }
+      }
     },
-    "asda" : {
-
+    "firstPageDesc" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Starting with your sleep is the best way to do it! By switching to polyphasic sleep, you can unlock a more productive and energetic version of yourself."
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uykudan başlamak bunun için en iyi yol! Polifazik uykuya geçerek daha enerjik ve üretken bir senin kapılarını arala."
+          }
+        }
+      }
     },
-    "LocalizedStrings.page2Subtitle" : {
-
+    "firstPageTitle" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Since you’re here, it’s clear you want to take control of your life."
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Burada olduğuna göre hayatını yoluna koymak istiyorsun."
+          }
+        }
+      }
     },
-    "LocalizedStrings.page2Title" : {
-
+    "fourthPageDesc" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "You can start by signing up or logging in if you already have an account!"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kaydolarak veya hesabın varsa giriş yaparak başlayabilirsin!"
+          }
+        }
+      }
     },
-    "LocalizedStrings.page3Subtitle" : {
-
-    },
-    "LocalizedStrings.page3Title" : {
-
-    },
-    "LocalizedStrings.page4Subtitle" : {
-
-    },
-    "LocalizedStrings.page4Title" : {
-
+    "fourthPageTitle" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ready for a change?"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Değişikliğe hazır mısın?"
+          }
+        }
+      }
     },
     "login" : {
       "extractionState" : "manual",
@@ -59,6 +115,70 @@
         }
       }
     },
+    "secondPageDesc" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "I know, it sounds like a lot... But you can change that with PolySleep"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Biliyorum, biraz fazla… Ama bunu PolySleep ile değiştirebilirsin."
+          }
+        }
+      }
+    },
+    "secondPageTitle" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Did you know that an average of 27 years, or 1/3 of your life, is spent sleeping?"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Hayatının ortalama 27 yılının, yani 1/3’ünün uykuda geçtiğini biliyor muydun?"
+          }
+        }
+      }
+    },
+    "thirdPageDesc" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Polyphasic sleep divides your rest into efficient cycles, giving your brain the energy it truly needs."
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Polifazik uyku, uykunu verimli döngülere bölerek beyninin ihtiyacı olan enerjiyi sağlar."
+          }
+        }
+      }
+    },
+    "thirdPageTitle" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Wouldn’t you love to wake up feeling more energized in less time?"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Daha az uyuyup daha enerjik uyanmayı istemez misin?"
+          }
+        }
+      }
+    },
     "welcomeTitle" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -70,7 +190,7 @@
         },
         "tr" : {
           "stringUnit" : {
-            "state" : "needs_review",
+            "state" : "translated",
             "value" : "PolySleep’e Hoşgeldin!"
           }
         }
