Welcome to Onboarding Navigation and Animation

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -81,6 +81,9 @@
         }
       }
     },
+    "Hello, World!" : {
+
+    },
     "login" : {
       "extractionState" : "manual",
       "localizations" : {
